fix: universal modal lander scroll on mobile (#892)

--- a/src/components/modal/v2/styles/components/_product-list-link.scss
+++ b/src/components/modal/v2/styles/components/_product-list-link.scss
@@ -6,6 +6,7 @@
     text-decoration: underline;
     color: $light-blue;
     font-family: $paypal-open;
+    font-size: 14px;
     font-weight: 600;
     cursor: pointer;
     padding: 0;
